bar-staging/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: bar-staging
  labels:
    istio-injection: enabled
