bar-staging/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: bar
  labels:
    app: bar

spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      annotations: {}
      labels:
        app: bar
    spec:
      containers:
        - name: bar
          image: "joaofnds/bar:0.3.0-dev.2"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
  strategy:
    canary:
      analysis:
        startingStep: 2
        templates:
          - templateName: success-rate
      trafficRouting:
        istio:
          virtualService:
            name: bar
            routes:
              - primary
          destinationRule:
            name: bar
            stableSubsetName: stable
            canarySubsetName: canary
      steps:
        - setWeight: 10
        - pause:
            duration: 1m
        - setWeight: 20
        - pause: {}
        - setWeight: 40
        - pause:
            duration: 1m
        - setWeight: 60
        - pause:
            duration: 1m
        - setWeight: 80
        - pause:
            duration: 1m
