bar-staging/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: bar

spec:
  hosts:
    - bar
  http:
    - name: primary
      route:
        - destination:
            host: bar
            subset: stable
          weight: 100
        - destination:
            host: bar
            subset: canary
          weight: 0
